# HydroAgent

./: .gitignore  Agent.py  CLAUDE.md  LICENSE  RAG_FAILURE_ANALYSIS.md  RAG_IMPROVEMENT_FIXES.md  README.md  adjusted_param_range.yaml  config.py  definitions_private.py  llms.txt  pyproject.toml  run.py  system_architecture.md  test_executor_visualization.py  test_hydrotool_integration.py  test_qwen.py
.claude/: settings.local.json
RAG/: README.md  README_Dify.md  __init__.py  dify_example.py  dify_knowledge_builder.py  document_loader.py  example.py  generator.py  rag_system.py  retriever.py  vector_store.py
builder/: README.md  __init__.py  api_client.py  execution_mode.py  intent_parser.py  llm_client.py  rag_planner.py  workflow_builder.py
configs/: __init__.py  config.py  definitions.py  example_definitions_private.py  example_private.py  model_config.py
docs/: ARCHITECTURE_FINAL.md  ARCHITECTURE_FOR_PAPER.md  ARCHITECTURE_IMPROVEMENT.md  ARCHITECTURE_V3_FINAL.md  ARCHITECTURE_v3.5.md  ARCHITECTURE_v5.0.md  BASIN_ID_FIX_SUMMARY.md  CHANGELOG.md  CHECKPOINT_SYSTEM.md  CONFIG_FORMAT.md  CUSTOM_ANALYSIS_FIX_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  ERROR_CLASSIFICATION_FIX_SUMMARY.md  EXPERIMENT_AB_V2_IMPROVEMENTS_20260114.md  EXPERIMENT_CLEANUP_SUMMARY_20260114.md  EXPERIMENT_C_ERROR_COVERAGE_ANALYSIS.md  EXPERIMENT_C_V4_DESIGN_20260114.md  EXP_C_REDESIGN_COMPARISON_20260114.md  EXP_D_FAILURE_FIX.md  FIX_CUSTOM_ANALYSIS_ISSUES.md  HydroAgent.md  INTELLIGENT_CODE_GENERATION_PLAN.md  INTENT_HYBRID_STRATEGY.md  ITERATIVE_CALIBRATION_FIX.md  ITERATIVE_CALIBRATION_FLOW_ANALYSIS.md  ITERATIVE_PARAM_RANGE_FIX_FINAL.md  LOOP_DETECTION_FIX.md  NETCDF_CACHE_FIX_SUMMARY.md  QUICKSTART.md  README.md  SMART_CODE_GENERATION.md  SYSTEM_LOGIC_ANALYSIS.md  TESTING_GUIDE.md  TOKEN_TRACKING_GUIDE.md  TOOL_SYSTEM_GUIDE.md  UNIFIED_INTERFACE.md  V5.0_IMPLEMENTATION_SUMMARY.md  V5.0_UPDATE_NOTES.md  V6_ARCHITECTURE_UNIFICATION.md  V6_LEGACY_CODE_INVENTORY.md  (+16 more)
documents/: README.md  markdown.md
examples/: dynamic_prompt_demo.py
executor/: README.md  README_NEW_ARCHITECTURE.md  __init__.py  main.py
experiment/: EXPERIMENT_SCRIPTS_COMPLETE.md  README.md  base_experiment.py  exp1_standard_calibration.py  exp2_llm_calibration.py  exp3_capability_breadth.py  exp4_knowledge_ablation.py  exp_1_standard_calibration.py  exp_1a_standard.py  exp_1a_standard_calibration.py  exp_1b_algorithm_model_coverage.py  exp_1b_info_completion.py  exp_1c_error_handling.py  exp_1c_multi_task.py  exp_1d_batch_processing.py  exp_2_nlp_robustness.py  exp_2a_full_params.py  exp_2a_repeated_calibration.py  exp_2b_missing_info.py  exp_2b_multi_basin.py  exp_2c_custom_data.py  exp_2c_multi_algorithm.py  exp_3_config_reliability.py  exp_3_iterative_optimization.py  exp_4_extended_analysis.py  exp_4_state_machine.py  exp_5_error_recovery.py  exp_5_stability.py  exp_6_prompt_pool.py  exp_7_large_scale.py  exp_8_checkpoint_resume.py  exp_A.py  exp_B.py  exp_C.py  exp_D.py  experiment.md  experiments.md  experiments_tool_system.md  plot_paper_figures.py  run_all_experiments.py  (+1 more)
hydroagent/: __init__.py  __main__.py  agent.py  config.py  llm.py  memory.py  skill_registry.py  skill_states.py  system.py
hydroclaw/: __init__.py  __main__.py  agent.py  cli.py  config.py  error_kb.py  llm.py  memory.py  pipeline.py  skill_registry.py  skill_states.py  ui.py
hydromcp/: README.md  README_ENHANCED.md  __init__.py  agent_integration.py  agent_interface.py  client.py  demo_enhanced_agent.py  demo_task_dispatcher.py  enhanced_workflow_executor.py  run_server.py  schemas.py  server.py  task_dispatcher.py  task_handlers.py  tools.py  tools_dict.py  workflow_executor.py
hydromodel/: __init__.py  run_hydromodel.py
hydrorag/: README.md  README_knowledge_integration.md  RESOURCE_CLEANUP.md  __init__.py  config.py  demo_hydrorag.py  demo_knowledge_integration.py  document_processor.py  embeddings_manager.py  example.py  faiss_vector_store.py  knowledge_updater.py  query_processor.py  rag_system.py  requirements_updated.txt  resource_manager.py  simple_test.py  test_faiss.py  test_hydrorag.py  vector_store.py
plot/: README.md  exp1_figures.py  exp2_figures.py  exp3_figures.py  exp4_figures.py  fig1_architecture.py  plot_paper_figures.py
script/: Agent_langchain_tool.py  Agent_old.py  Agent_withrag.py  README.md  RUN_RAG_Comparison.md  calibrate_gr.py  check_ollama_status.py  evaluate_gr.py  example_executor_usage.py  fix_embedding_dimension_mismatch.py  prepare_data.py  quick_rag_rebuild.py  run_example_workflows.py  run_knowledge_update.py  run_knowledge_updater.py  run_rag_comparison.py  run_react_optimization.py  test_conditional_skip.py
scripts/: README.md  audit_utils.py  example_token_tracking.py  exp1_standard_calibration.py  exp2_llm_calibration.py  exp3_capability_breadth.py  exp3_scenario_robustness.py  exp4_create_skill.py  exp4_knowledge_ablation.py  exp4_tool_creation.py  exp5_memory.py  (+16 more)
(+442 files in other folders)
