[project]
name = "hydroagent"
version = "0.2.0"
description = "Intelligent Hydrological Model Calibration System with RAG"
authors = [
    {name = "zhuanglaihong", email = "zhuanglaihong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==0.3.26",
    "langchain-community>=0.0.20",
    "langchain_core == 0.3.70",
    "langchain-ollama",
    "streamlit==1.47.0",
    "openai>=1.97.1",
    "langchain-openai>=0.3.28",
    "ipykernel",
    "numba",
    "scikit-learn",
    "deap",
    "spotpy",
    "pytest",
    "bmipy",
    "pyyaml",
    "requests",
    "muskingumcunge",
    "hydroutils @ git+ssh://git@gitcode.com/dlut-water/hydroutils.git@dev",
    "hydrodatasource @ git+ssh://git@gitcode.com/dlut-water/hydrodatasource.git@dev",
    "hydrodataset @ git+ssh://git@gitcode.com/dlut-water/hydrodataset.git@dev",
    "hydromodel @ git+ssh://git@gitcode.com/dlut-water/hydromodel.git@dev",
    "httpx",
    "modelcontextprotocol>=0.1.0",
    "chromadb>=0.4.0",
    "langchain-text-splitters>=0.0.1",
    "pypdf>=3.0.0",
    "python-docx>=0.8.11",
    "langchain-huggingface>=0.1.0",
    "faiss-cpu>=1.12.0",
]

[project.scripts]
hydroagent = "scripts.run_agent:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydroagent*", "configs*"]
exclude = ["test*", "scripts*", "docs*", "builder*", "executor*", "hydrorag*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
