[project]
name = "hydroclaw"
version = "0.3.0"
description = "LLM-driven Hydrological Model Calibration Agent"
authors = [
    {name = "zhuanglaihong", email = "zhuanglaihong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM 客户端
    "openai>=1.97.1",
    "httpx",

    # 终端 UI
    "rich>=13.0.0",

    # 水文建模后端
    "hydromodel>=0.3.2",
    "hydroutils>=0.1.0",
    "hydrodataset>=0.2.3",
    "hydrodatasource>=0.2.0",

    # 水文建模依赖（hydromodel 内部使用）
    "numpy",
    "matplotlib",
    "xarray",
    "pyyaml",
    "scikit-learn",
    "deap",
    "spotpy",
    "numba",
    "bmipy",
    "muskingumcunge",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipykernel",
]

[project.scripts]
hydroclaw = "hydroclaw.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hydroclaw*", "configs*"]
exclude = ["test*", "scripts*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
# aqua-fetch 要求 pandas<=2.1.4，但 hydromodel 要求 pandas>=2.3.1，强制覆盖
override-dependencies = [
    "pandas>=2.3.1",
]
